--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": [
         "nodes",
         "service",
-        "auth",
+        "auth"
     ],
     "license": "MIT",
     "homepage": "http://nodesagency.com",
