--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "nodes/core": "~1.0",
+        "nodes/core": "~1.0"
     },
     "autoload": {
         "psr-4": {
