--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
             "Nodes\\ServiceAuthenticator\\": "src/"
         },
         "files": [
-
+            "src/Support/Helpers/Auth.php"
         ]
     }
 }
