--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "nodes/core": "~1.0",
         "nodes/cache": "~1.0",
-        "nodes/database": "~1.0",
+        "nodes/database": "~1.0"
     },
     "autoload": {
         "psr-4": {
